# charliebox

./: LICENSE
.github/workflows/: publish.yml
npm-release/: README.md  index.js  package.json
pypi-release/: LICENSE  README.md  pyproject.toml
pypi-release/src/charliebox/: __init__.py  cli.py
